# pkedit-qt

./: .clang-format  .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/workflows/: build-macos.yml
include/: init.h  pokemon.h  window.h
src/: main.cc  mainwindow.ui  window.cc
